<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <include android:id="@+id/miActionBar"
        layout="@layout/app_bar">

    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/borde_superior"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@+id/miActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_about"
            android:textSize="@dimen/tituloAbout"
            android:layout_gravity="center"
            android:textColor="@color/PrimaryColor">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding">
        <ImageView
            android:id="@+id/imgImagen"
            android:layout_width="@dimen/imagenAbout"
            android:layout_height="@dimen/imagenAbout"
            android:src="@drawable/huella1">
        </ImageView>

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/app_name"
            android:textSize="@dimen/letraIcono"
            android:textStyle="bold"></TextView>
        </LinearLayout>
        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desarrollador"
            android:textSize="@dimen/letraIcono">
        </TextView>
        <TextView
            android:id="@+id/tvPais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pais"
            android:textSize="@dimen/letramedia">
        </TextView>
        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textSize="@dimen/letramedia">
        </TextView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>